--- a/README
+++ b/README
@@ -1,9 +1,15 @@
 ## Online collectors database framework
 
-The online collections database aims to be a generic and highly configurable web based information system.
+The online collections database aims to be a generic and highly configurable web based information system for collectors of just about anything.
+
+** Requires **
+
+- Rails 4.1.4
+- Ruby 2.1.2
 
 ** Key features **
 
+- Item bluk import and maintenance via spreadsheet
 - I18n support
 
 ** Technologies **
