--- a/README
+++ b/README
@@ -26,3 +26,5 @@ The online collections database aims to be a generic and highly configurable web
 #2 - 16:08 to 16:16 = 12 minutes (cached items list)
 #3 - 43 seconds without the other lookups. Just the name
 #4 - 16:26 to 16:30 = 4 minutes (cached item relationships)
+
+RAILS_ENV=production bundle exec rake assets:precompile
